
cc_library(
	name = "phoenix",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_utility//:utility",
		"@com_github_bazelboost_proto//:proto",
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_preprocessor//:preprocessor",
		"@com_github_bazelboost_fusion//:fusion",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_range//:range",
		"@com_github_bazelboost_predef//:predef"
	],
)
